force-app/main/default/objects/News_Events__c.object
<CustomObject>
    <fields>
        <fullName>Academic_Year__c</fullName>
        <formula>IF(MONTH(Event_Start_Date__c)&gt;=8, 

TEXT(YEAR(Event_Start_Date__c))&amp;&quot;-&quot;&amp;TEXT(YEAR(Event_Start_Date__c)+1),

TEXT(YEAR(Event_Start_Date__c)-1)&amp;&quot;-&quot;&amp;TEXT(YEAR(Event_Start_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Academic Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Id__c</fullName>
        <description>This field captures the id of any attachment created in its parent record</description>
        <label>Attachment Id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Automated_Reminder_Email_Sent__c</fullName>
        <description>Indicates when an automated reminder email has been sent for this event and prevents another one from being sent.</description>
        <label>Last Email Notification Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Automated_Reminder_Email_Type_Text__c</fullName>
        <description>Populated via a workflow rule and field update, based on the type of change made to an event that will be occurring in the next 2 weeks. To be used as a merge field in an email template to define whether an event was created/edited/deleted</description>
        <label>Automated Reminder Email Type Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blog_Post_Preview__c</fullName>
        <inlineHelpText>The blog text is made up of your &apos;Title&apos;, &apos;Teaser&apos; and &apos;Main Text&apos;. To adjust it you should adjust the relevant field accordingly.</inlineHelpText>
        <label>Blog Post Preview</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CopyNewsId__c</fullName>
        <label>CopyNewsId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>IF($RecordType.DeveloperName = &quot;News&quot;, TODAY(), null)</defaultValue>
        <description>Used for &apos;Term Dates&apos;, &apos;Notices&apos; &amp; &apos;News&apos;. Copies to the &apos;Start Date&apos; field by means of workflow. Only required so that the field has a more appropriate label e.g. &apos;Start Date&apos; and &apos;End Date&apos; labels would be confusing if there is only one date</description>
        <inlineHelpText>For News: The date which the news is relevant to
For a Notice: The date or deadline that the notice is relevant to e.g. date a permission slip is due
For a Term Date: The &apos;First Day Of&apos; or &apos;Last Day Of&apos; the term as defined in the &apos;Date Is&apos; field</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deleted_Attachment_Id__c</fullName>
        <description>Captures the att id of any deleted attachment in its parent record</description>
        <label>Deleted Attachment Id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deletion_Prevention__c</fullName>
        <formula>/*AND(
    OR(
       Owner:User.Username = &quot;carla.butterfield@britishschools.co.uk&quot;,
       Owner:User.Username = &quot;hanna.ward@britishschools.co.uk&quot;
       ),
    OR(
       INCLUDES(School_Override_Field__c, &quot;Marbella&quot;),
       INCLUDES(School_Override_Field__c, &quot;Navarra&quot;),
       INCLUDES(School_Override_Field__c, &quot;Brasilia&quot;),
       INCLUDES(School_Override_Field__c, &quot;New York&quot;),
       INCLUDES(School_Override_Field__c, &quot;Group Site&quot;),
       INCLUDES(School_Override_Field__c, &quot;Sandboxes&quot;)
       )
    )*/

TEXT(School_Text__c) != School__c

/*AND(
    TEXT(Owner:User.School__c) = &quot;The British Schools Foundation&quot;,
    OR(
       INCLUDES(School_Override_Field__c, &quot;Kuala Lumpur&quot;),
       INCLUDES(School_Override_Field__c, &quot;Yangon&quot;),
       INCLUDES(School_Override_Field__c, &quot;Manila&quot;),
       INCLUDES(School_Override_Field__c, &quot;Moscow&quot;),
       INCLUDES(School_Override_Field__c, &quot;Tashkent&quot;),
       INCLUDES(School_Override_Field__c, &quot;Nanjing&quot;),
       INCLUDES(School_Override_Field__c, &quot;São Paulo&quot;)
       )
    )*/

/*ISBLANK(TEXT(Share_with_Admin_Dept_of__c))*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deletion Prevention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_All_Email_Notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, will prevent any email notifications from being sent for the relevant record</description>
        <inlineHelpText>This option is only provided for senior members of staff and portal liaisons as disabling it circumvents a school policy and should only be necessary on rare occasions.</inlineHelpText>
        <label>Disable All Email Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>English_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points at the parent (english) version of this record</description>
        <inlineHelpText>Only required for records in languages other than English</inlineHelpText>
        <label>English Parent</label>
        <referenceTo>News_Events__c</referenceTo>
        <relationshipLabel>Translations</relationshipLabel>
        <relationshipName>Translated_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Ids__c</fullName>
        <label>Error Ids</label>
        <length>35000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Essential_Info_Teaser_English__c</fullName>
        <label>Essential Info/Teaser (English)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Dates_Text_for_Email__c</fullName>
        <formula>TEXT(DAY(Event_Start_Date__c)) &amp; &quot;-&quot; &amp; Event_Start_Month__c &amp; &quot;-&quot; &amp; TEXT(YEAR(Event_Start_Date__c))


&amp; IF(TEXT(Event_End_Date__c)&lt;&gt;&quot;&quot;, &quot; to &quot; &amp;TEXT(DAY(Event_End_Date__c)) &amp; &quot;-&quot; &amp; Event_End_Month__c &amp; &quot;-&quot; &amp; TEXT(YEAR(Event_End_Date__c)), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Dates Text for Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_End_Date__c</fullName>
        <inlineHelpText>If the end date is the same as the start date then please leave blank</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_End_Month__c</fullName>
        <formula>CASE(TEXT(MONTH(Event_End_Date__c)), &quot;1&quot;, &quot;Jan&quot;, &quot;2&quot;, &quot;Feb&quot;, &quot;3&quot;, &quot;Mar&quot;, &quot;4&quot;, &quot;Apr&quot;, &quot;5&quot;, &quot;May&quot;, &quot;6&quot;, &quot;Jun&quot;, &quot;7&quot;, &quot;Jul&quot;, &quot;8&quot;, &quot;Aug&quot;, &quot;9&quot;, &quot;Sep&quot;, &quot;10&quot;, &quot;Oct&quot;, &quot;11&quot;, &quot;Nov&quot;, &quot;12&quot;, &quot;Dec&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event End Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Start_Month__c</fullName>
        <formula>CASE(TEXT(MONTH(Event_Start_Date__c)), &quot;1&quot;, &quot;Jan&quot;, &quot;2&quot;, &quot;Feb&quot;, &quot;3&quot;, &quot;Mar&quot;, &quot;4&quot;, &quot;Apr&quot;, &quot;5&quot;, &quot;May&quot;, &quot;6&quot;, &quot;Jun&quot;, &quot;7&quot;, &quot;Jul&quot;, &quot;8&quot;, &quot;Aug&quot;, &quot;9&quot;, &quot;Sep&quot;, &quot;10&quot;, &quot;Oct&quot;, &quot;11&quot;, &quot;Nov&quot;, &quot;12&quot;, &quot;Dec&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Start Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Title_For_Email__c</fullName>
        <formula>IF(RecordType.Name = &quot;Notice&quot;, &quot;Notice: &quot;&amp;Name, 

IF(RecordType.Name = &quot;Event&quot;, &quot;School Event: &quot;&amp;Name,

RecordType.Name &amp;&quot; Date: &quot;&amp;Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Title For Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Featured_Videos__c</fullName>
        <inlineHelpText>Select what videos you want to be shown on the corresponding sidebar block on the school site.</inlineHelpText>
        <label>Featured Videos</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Date_of_Term_3_Copy__c</fullName>
        <description>Required to bypass the 5000 character limit</description>
        <label>First Date of Term 3 This Year (Copy)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Date_of_Term_3_Next_Year__c</fullName>
        <formula>CASE(Owner:User.School__c, 
&quot;The British International School of Kuala Lumpur&quot;, DATE(2022,04,22), 
&quot;The British School of Nanjing&quot;, DATE(2022,04,08), 
&quot;The British School of Tashkent&quot;, DATE(2022,03,25), 
&quot;The British School of Navarra&quot;, DATE(2022,04,29), 
&quot;The British International School of Marbella&quot;, DATE(2022,04,23), 
&quot;The British College of Brazil&quot;, DATE(2022,04,23), 
&quot;The British School of Brasilia&quot;, DATE(2022,04,24), 
&quot;The British School Yangon&quot;, DATE(2022,04,23), 
&quot;Nord Anglia International School Manila&quot;, DATE(2022,04,23), 
&quot;The International School of Moscow&quot;, DATE(2022,04,23), 

DATE(2022,04,03))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Date of Term 3 Next Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Date_of_Term_3__c</fullName>
        <description>Indicates the first date of the next term 3 (updated each year on the preceding 1 August) to identify whether a date should be included under &apos;This Term&apos; for term 2 or term 3 (and in incredibly rare circumstances, both)</description>
        <formula>CASE(Owner:User.School__c, 
&quot;The British International School of Kuala Lumpur&quot;, DATE(2022,04,22), 
&quot;The British School of Nanjing&quot;, DATE(2022,04,08), 
&quot;The British School of Tashkent&quot;, DATE(2022,03,25), 
&quot;The British School of Navarra&quot;, DATE(2022,04,29), 
&quot;The British International School of Marbella&quot;, DATE(2022,04,23), 
&quot;The British College of Brazil&quot;, DATE(2022,04,23), 
&quot;The British School of Brasilia&quot;, DATE(2022,04,24), 
&quot;The British School Yangon&quot;, DATE(2022,04,23), 
&quot;Nord Anglia International School Manila&quot;, DATE(2022,04,23), 
&quot;The International School of Moscow&quot;, DATE(2022,04,23), 

DATE(2022,04,03))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Date of Term 3 This Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fst_Email_Notification_Preview__c</fullName>
        <description>Provides a plain text preview of the email.</description>
        <inlineHelpText>This is a plain text preview only.</inlineHelpText>
        <label>Email Notification Preview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fst_Email_Notification_Text__c</fullName>
        <description>03/11/14 PENDING DELETION - NEEDS TO BE REMOVED FROM RELEVANT APEX CLASS</description>
        <label>Email Notification Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Has_Error_IDs__c</fullName>
        <description>Populated via a workflow rule, is set to &apos;Yes&apos; whenever &apos;Error_Ids__c&apos; != null</description>
        <label>Has Error IDs?</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hide_From_Navigation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is used to publish a news item without including it in any navigation block of the site. So the node published will only be accessible by the correct URL or to be crawled by SE.</inlineHelpText>
        <label>Hide From Navigation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IdText__c</fullName>
        <label>IdText</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_More_Date__c</fullName>
        <description>Defines when a record should be included in the &apos;More&apos; filter on the &apos;Calendar&apos; tab in the parent portal</description>
        <formula>OR( 
   Event_Start_Date__c &gt;= TODAY(), 
   Event_End_Date__c &gt;= TODAY() 
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is More Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_My_Record__c</fullName>
        <formula>OwnerId = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is My Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Next_14_Day_Event__c</fullName>
        <formula>AND(
    RecordType.DeveloperName != &quot;News&quot;, 
    Event_Start_Date__c - 14 &lt;= TODAY(),  
    OR(
       Event_Start_Date__c &gt;= TODAY(), 
       Event_End_Date__c &gt;= TODAY()
       )
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Next 14 Day Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_This_Term_Record__c</fullName>
        <description>Defines when a record should be included in the &apos;This Term&apos; filter on the &apos;Calendar&apos; tab in the parent portal</description>
        <formula>IF(AND(TODAY()&gt;=DATE(YEAR(First_Date_of_Term_3_Copy__c)-1,08,01), TODAY()&lt;=DATE(YEAR(First_Date_of_Term_3_Copy__c)-1,12,31), OR(Event_Start_Date__c&gt;=TODAY(), Event_End_Date__c&gt;=TODAY()), Event_Start_Date__c&lt;=DATE(YEAR(First_Date_of_Term_3_Copy__c)-1,12,31)), TRUE, 

IF(AND(TODAY()&gt;=DATE(YEAR(First_Date_of_Term_3_Copy__c),01,01), TODAY()&lt;First_Date_of_Term_3_Copy__c, OR(Event_Start_Date__c&gt;=TODAY(), Event_End_Date__c&gt;=TODAY()), Event_Start_Date__c&lt;First_Date_of_Term_3_Copy__c), TRUE,

IF(AND(TODAY()&gt;=First_Date_of_Term_3_Copy__c, TODAY()&lt;=DATE(YEAR(First_Date_of_Term_3_Copy__c),07,31), OR(Event_Start_Date__c&gt;=TODAY(), Event_End_Date__c&gt;=TODAY()), Event_Start_Date__c&lt;=DATE(YEAR(First_Date_of_Term_3_Copy__c),07,31)), TRUE,

FALSE)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is This Term Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_This_Year_Record__c</fullName>
        <description>Defines when a record should be included in the &apos;This Term&apos; filter on the &apos;Calendar&apos; tab in the parent portal</description>
        <formula>AND(OR(Event_Start_Date__c &gt;=TODAY(), Event_End_Date__c &gt;=TODAY()), Event_Start_Date__c &lt;  Student_Group__r.Start_Date_Next_Academic_Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is This Year Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_This_Year_Record_inc_Past__c</fullName>
        <formula>AND(Event_Start_Date__c &lt; Student_Group__r.Start_Date_Next_Academic_Year__c, Event_Start_Date__c &gt;= Student_Group__r.Start_Date_This_Academic_Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is This Year Record (inc. Past)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keep_in_News_Slideshow_Until_Override__c</fullName>
        <inlineHelpText>Entering a date in this field will list the news record as a &apos;featured&apos; record on the site, showing it near the top on the home page and other news blocks around the site. Will only show below other &apos;featured&apos; records that were posted on a later date.</inlineHelpText>
        <label>Show as Featured News Item Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>The language of the record. This field is used in connection with the school websites</description>
        <inlineHelpText>Select the language for this record.</inlineHelpText>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EN</fullName>
                    <default>true</default>
                    <label>EN</label>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
                <value>
                    <fullName>RU</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>UZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link_1_Title__c</fullName>
        <label>Link 1 Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_1__c</fullName>
        <label>Link 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_2_Title__c</fullName>
        <label>Link 2 Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_2__c</fullName>
        <label>Link 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_3_Title__c</fullName>
        <label>Link 3 Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_3__c</fullName>
        <label>Link 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Main_Text_English__c</fullName>
        <label>Main Text (English)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Main_Text__c</fullName>
        <inlineHelpText>Please add the main text in a standard font such as Arial 12 Black (Regular) for best results.</inlineHelpText>
        <label>Main Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Mass_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mass Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meta_Tag_Description_English__c</fullName>
        <label>Meta Tag Description (English)</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Meta_Tag_Description__c</fullName>
        <inlineHelpText>A brief and concise summary of the record, preferably 150-160 characters. The &apos;Meta Tag Description&apos; may be used by search engines such as Google to display a snippet about the page in search results.</inlineHelpText>
        <label>Meta Tag Description</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Meta_Tag_Title_English__c</fullName>
        <label>Meta Tag Title (English)</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Meta_Tag_Title__c</fullName>
        <inlineHelpText>The meta tag title should be limited to 60 characters and will show in the browser tab when the end user access the record on the website. If this field is empty (if allowed) the node on the website will get populated by the Menu title of the record.</inlineHelpText>
        <label>Meta Tag Title</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Newly_Created__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Newly Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notification_Email_Edited_Fields_Text__c</fullName>
        <label>Notification Email Edited Fields Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notification_Email_Text_Pt_1__c</fullName>
        <formula>IF(

TEXT(Notification_Type__c) = &quot;Cancelled&quot;, &quot;The following date has been cancelled and removed from your calendar:&quot;,

IF(TEXT(Notification_Type__c) = &quot;Edited&quot;, 

IF(CONTAINS(Notification_Email_Edited_Fields_Text__c, &quot;and&quot;), 

&quot;Below are the updated details of a date in your calendar that &quot;&amp;
IF(Event_Start_Date__c &gt; TODAY()+14, &quot;previously fell within the next 14 days. &quot; , &quot;falls within the next 14 days. &quot;)
&amp;&quot;Note that only the &quot;&amp;Notification_Email_Edited_Fields_Text__c&amp;&quot; have been changed:&quot;, 

IF(AND(Notification_Email_Edited_Fields_Text__c &lt;&gt; &quot;&quot;, NOT(CONTAINS(Notification_Email_Edited_Fields_Text__c, &quot;and&quot;))), 

&quot;Below are the updated details of a date in your calendar that &quot;&amp;
IF(Event_Start_Date__c &gt; TODAY()+14, &quot;previously fell within the next 14 days. &quot; , &quot;falls within the next 14 days. &quot;)
&amp;&quot;Note that only the &quot;&amp;Notification_Email_Edited_Fields_Text__c&amp;&quot; has been changed:&quot;, 

&quot;Below are the updated details of a date in your calendar which falls within the next 14 days:&quot;))

, &quot;We have added a new date to your calendar which falls within the next 14 days:&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notification Email Text Pt.1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Email_Text_Re__c</fullName>
        <formula>IF(TEXT(Notification_Type__c) = &quot;Edited&quot;, &quot;Calendar Entry Amended&quot;, 

IF(TEXT(Notification_Type__c) = &quot;Cancelled&quot;, &quot;Calendar Entry Cancellation&quot;, 

&quot;New Calendar Entry&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notification Email Text Re</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Type__c</fullName>
        <description>Defines the type of notification to be sent (set by button click or workflow rule action) when a calendar entry that falls within the next 14 days is created, edited or cancelled</description>
        <label>Notification Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Edited</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Only_1_Translation_Per_Language_Allowed__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>A UID for translated records. Populated via a workflow rule, ensures a unique combination of English_Parent.Id and Language__c to prevent more than one translation per language. Field names in this way to make error message more understandable.</description>
        <label>Only 1 Translation Per Language Allowed!</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Path_Alias__c</fullName>
        <inlineHelpText>OPTIONAL. Paste here the ending url path of the node on the old school website. Ex: from www.oldsite.com/curriculum/overview.asp paste &quot;curriculum/1styear/overview&quot;. No initial &quot;/&quot; no &quot;.asp&quot; or similar.</inlineHelpText>
        <label>Path Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picture_Spec_Help__c</fullName>
        <description>An un-editable field which simply contains the guidelines for adding picture attachments</description>
        <inlineHelpText>300kb Approx. PNG - Min 680px(W)x400px(H)</inlineHelpText>
        <label>Picture Spec Help</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Entry_in_Related_Blog__c</fullName>
        <inlineHelpText>Use this option to create a post in the community chatter group to invite parents to comment/ask questions about the event. NB. Will only work if &apos;Related Class Blog Available?&apos; = TRUE</inlineHelpText>
        <label>Post Entry in Related Blog?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes - Standard Post</fullName>
                </value>
                <value>
                    <fullName>Yes - And tag as Essential Communication</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_to_FB__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field if you want a teaser of the node to appear on the school fb page. Not valid for group website posts.</inlineHelpText>
        <label>Post to FB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Posted_in_Blog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated via Apex, indicates when the blog post has been completed</description>
        <label>Posted in Blog?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_in_Portal_School_Hub__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Publish in Portal Calendar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_on_Group_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish on Group Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_on_School_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish on Site(s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualifies_for_Automatic_Email_Reminder__c</fullName>
        <formula>AND(
    $Profile.Name != &quot;System Administrator&quot;, 
    $Profile.Name != &quot;Group Designer&quot;, 
    Is_Next_14_Day_Event__c = TRUE, 
    Publish_in_Portal_School_Hub__c = TRUE,
    TEXT(Language__c) = &quot;EN&quot;,
    Disable_All_Email_Notifications__c = FALSE
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualifies for Automatic Email Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Chatter_Group_ID_Text__c</fullName>
        <description>Required to allow a link to the chatter group/blog to be included in event reminder emails. Populated via a workflow rule from the relevant formula field to get round the 15 object relationship limit on contact</description>
        <label>Related Chatter Group ID Text</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Chatter_Group_ID__c</fullName>
        <formula>Student_Group__r.Chatter_Group_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Chatter Group ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Class_Blog_Available__c</fullName>
        <formula>IF(AND(Student_Group__c &lt;&gt; &quot;&quot;, Student_Group__r.Chatter_Group_Id__c &lt;&gt; &quot;&quot;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Class Blog Available?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retry_Sending_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if checked, workflow executes time based trigger to invoke apex logic to retry sending email notification.</description>
        <inlineHelpText>if checked, workflow executes time based trigger to invoke apex logic to retry sending email notification.</inlineHelpText>
        <label>Retry Sending Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_Acronym__c</fullName>
        <formula>Student_Group__r.Owner:User.School_Abbreviation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Acronym</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_List__c</fullName>
        <description>A middle step from the school override field to the school list copy field. 22/12/2016: Note that this field is close to reaching the character limit. The workaround would be to copy the values from School_Override_Field__c as a string into a text field via a workflow rule/field update and then adjust the formula to reference that text field rather than constructing the string directly in the formula below. Please contact Ben to take care of this as the formula is complex, with a lot of nested IF statements.</description>
        <formula>IF(
   RecordType.DeveloperName != &quot;News&quot;, 
   TEXT(Student_Group__r.Owner:User.School__c)&amp;&quot;;&quot;&amp;
   IF(
      INCLUDES(School_Override_Field__c, &quot;Sandboxes&quot;), 
      &quot;Sandbox 1;Sandbox 2;&quot;,
      null
      ),
   IF(
      OR(
         ISNULL(School_Override_Field__c), 
         INCLUDES(School_Override_Field__c, &quot;No Override&quot;)
         ), 
      TEXT(Owner:User.School__c),  
      IF( 
         INCLUDES(School_Override_Field__c, &quot;Brasilia&quot;), 
         &quot;brasilia1;&quot;,
         null 
         )&amp; 
      IF( 
         INCLUDES(School_Override_Field__c, &quot;Nanjing&quot;), 
         &quot;nanjing1;&quot;,
         null 
         )&amp; 
      IF(
         INCLUDES(School_Override_Field__c, &quot;Marbella&quot;), 
         &quot;marbella1;&quot;,
         null 
         )&amp; 
      IF( 
         INCLUDES(School_Override_Field__c, &quot;Navarra&quot;), 
         &quot;navarra1;&quot;,
         null 
         )&amp; 
      IF( 
         INCLUDES(School_Override_Field__c, &quot;Tashkent&quot;), 
         &quot;tashkent1;&quot;,
         null 
         )&amp; 
      IF( 
         INCLUDES(School_Override_Field__c, &quot;São Paulo&quot;),
         &quot;saopaulo1;&quot;,
         null 
         )&amp; 
      IF( 
         INCLUDES(School_Override_Field__c, &quot;Kuala Lumpur&quot;), 
         &quot;kualalumpur1;&quot;,
         null
         )&amp; 
      IF( 
         INCLUDES(School_Override_Field__c, &quot;Moscow&quot;), 
         &quot;moscow1;&quot;,
         null
         )&amp; 
      IF(
         INCLUDES(School_Override_Field__c, &quot;Manila&quot;), 
         &quot;manila1;&quot;,
         null
         )&amp; 
      IF(
         INCLUDES(School_Override_Field__c, &quot;Yangon&quot;), 
         &quot;yangon1;&quot;,
         null
         )&amp; 
      IF(
         INCLUDES(School_Override_Field__c, &quot;New York&quot;), 
         &quot;newyork1;&quot;,
         null
         )&amp;
      IF(
         INCLUDES(School_Override_Field__c, &quot;Group Site&quot;), 
         &quot;The British Schools Foundation;&quot;,
         null
         )&amp;
      IF(
         INCLUDES(School_Override_Field__c, &quot;Sandboxes&quot;), 
         &quot;Sandbox 1;Sandbox 2&quot;,
         null
         )
      )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field to set the values from the picklist in a text array. The Schools List Copy field will copy this field. Should be hidden.</inlineHelpText>
        <label>School List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Override_Count__c</fullName>
        <formula>IF(INCLUDES(School_Override_Field__c, &quot;No Override&quot;), 1, 0) +
IF(INCLUDES(School_Override_Field__c, &quot;Brasilia&quot;), 1, 0) +
IF(INCLUDES(School_Override_Field__c, &quot;Nanjing&quot;), 1, 0) +
IF(INCLUDES(School_Override_Field__c, &quot;Marbella&quot;), 1, 0) +
IF(INCLUDES(School_Override_Field__c, &quot;Navarra&quot;), 1, 0) +
IF(INCLUDES(School_Override_Field__c, &quot;Tashkent&quot;), 1, 0) +
IF(INCLUDES(School_Override_Field__c, &quot;São Paulo&quot;), 1, 0) +
IF(INCLUDES(School_Override_Field__c, &quot;Kuala Lumpur&quot;), 1, 0) +
IF(INCLUDES(School_Override_Field__c, &quot;Moscow&quot;), 1, 0) +
IF(INCLUDES(School_Override_Field__c, &quot;Manila&quot;), 1, 0) +
IF(INCLUDES(School_Override_Field__c, &quot;New York&quot;), 1, 0) +
IF(INCLUDES(School_Override_Field__c, &quot;Yangon&quot;), 1, 0) +
IF(INCLUDES(School_Override_Field__c, &quot;Group Site&quot;), 1, 0) +
IF(INCLUDES(School_Override_Field__c, &quot;Sandboxes&quot;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Override Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>